[project]
name = "circulat-buffer"
version = "0.1.0"
description = "..."
authors = [
    { name = "Jürgen Schoenemeyer", email = "js007@web.de" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "mypy>=1.15.0",
]

[tool.basedpyright]
deprecateTypingAliases =  false
reportAny = false
reportImplicitRelativeImport = false
reportUnusedCallResult = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportExplicitAny = false
